--- a/app/globals.css
+++ b/app/globals.css
@@ -51,10 +51,10 @@
   --breakpoint-lg: 960px;
   --breakpoint-xl: 1200px;
   --color-primary: #1c1c22;
-  /* --color-accent: #00ff99;
-  --color-accent-hover: #00e187; */
-  --color-accent: #fcba03;
-  --color-accent-hover: #d49d08;
+  --color-accent: #00ff99;
+  --color-accent-hover: #00e187;
+  /* --color-accent: #fcba03; */
+  /* --color-accent-hover: #d49d08; */
 
 }
 
